# DRF_ModelViewSet

./: db.sqlite3  pyproject.toml  подсказки.txt
core/: settings.py  urls.py
products/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0003_alter_category_options.py
